# cross-platform-tcp-communication-with-qt6-qml

./: README.md
qml_client/qml_client/: CMakeLists.txt  Main.qml  main.cpp  myclient.cpp  myclient.h  mytimer.cpp  res.qrc
qml_server/qml_server/: CMakeLists.txt  Main.qml  main.cpp  myserver.cpp  myserver.h  mytimer.h  res.qrc
